<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/dialog_permission"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/bg_card_with_stroke"
        android:elevation="10dp"
        android:padding="@dimen/padding_16">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/dialogTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/inter_bold"
            android:gravity="center"
            android:text="@string/read_write_permission_title"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_18"
            app:autoSizeMaxTextSize="@dimen/text_size_24"
            app:autoSizeMinTextSize="@dimen/text_size_12"
            app:autoSizeTextType="uniform"
            app:layout_constraintBottom_toTopOf="@+id/dialogMessage"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/dialogMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_16"
            android:fontFamily="@font/inter_medium"
            android:gravity="center"
            android:text="@string/read_write_permission_description"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_16"
            app:autoSizeMaxTextSize="@dimen/text_size_18"
            app:autoSizeMinTextSize="@dimen/text_size_12"
            app:autoSizeTextType="uniform"
            app:layout_constraintBottom_toTopOf="@+id/ll_buttons"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dialogTitle" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/ll_buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_16"
            android:layout_marginTop="@dimen/margin_24"
            android:layout_marginEnd="@dimen/margin_16"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@+id/button_settings"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/dialogMessage">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/cancelButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_12"
                android:layout_weight="1"
                android:background="@drawable/bg_item"
                android:fontFamily="@font/inter_semi_bold"
                android:text="@string/cancel"
                android:textAllCaps="false"
                android:textColor="@color/purple"
                android:textSize="@dimen/text_size_16"
                app:autoSizeMaxTextSize="@dimen/text_size_20"
                app:autoSizeMinTextSize="@dimen/text_size_12"
                app:autoSizeTextType="uniform" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/allowButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_12"
                android:layout_weight="1"
                android:background="@drawable/bg_size"
                android:fontFamily="@font/inter_semi_bold"
                android:text="@string/allow"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_16"
                app:autoSizeMaxTextSize="@dimen/text_size_20"
                app:autoSizeMinTextSize="@dimen/text_size_12"
                app:autoSizeTextType="uniform" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/button_settings"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_12"
            android:background="@drawable/bg_allow_button"
            android:fontFamily="@font/inter_semi_bold"
            android:text="@string/go_to_settings"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_16"
            app:autoSizeMaxTextSize="@dimen/text_size_20"
            app:autoSizeMinTextSize="@dimen/text_size_12"
            app:autoSizeTextType="uniform"
            app:layout_constraintTop_toBottomOf="@+id/ll_buttons"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>