<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_back"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="@dimen/margin_24"
            android:src="@drawable/ic_arrow_left"
            app:layout_constraintBottom_toTopOf="@+id/gl_edit_title"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_edit_title"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:fontFamily="@font/inter_semi_bold"
            android:gravity="center"
            android:text="@string/edit"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_16"
            android:autoSizeMaxTextSize="@dimen/text_size_20"
            android:autoSizeMinTextSize="@dimen/text_size_12"
            android:autoSizeTextType="uniform"
            app:layout_constraintBottom_toTopOf="@+id/gl_edit_title"
            app:layout_constraintEnd_toStartOf="@+id/tv_edit_reset"
            app:layout_constraintStart_toEndOf="@+id/iv_back"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_edit_reset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_24"
            android:fontFamily="@font/inter_medium"
            android:text="@string/reset"
            android:textAllCaps="false"
            android:textColor="@color/gray_100"
            android:textSize="@dimen/text_size_14"
            android:autoSizeMaxTextSize="@dimen/text_size_16"
            android:autoSizeMinTextSize="@dimen/text_size_12"
            android:autoSizeTextType="uniform"
            app:layout_constraintBottom_toTopOf="@+id/gl_edit_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tv_edit_title"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_edit_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.10" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="@dimen/margin_24"
            android:layout_marginEnd="@dimen/margin_24"
            android:background="@drawable/bg_image"
            app:layout_constraintBottom_toTopOf="@+id/gl_edit_image"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/gl_edit_title">

            <com.makeramen.roundedimageview.RoundedImageView
                android:id="@+id/iv_edited_photo"
                android:layout_width="0dp"
                android:layout_height="0dp"
                tools:src="@drawable/img_realistic"
                android:scaleType="fitXY"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:riv_corner_radius="20dp" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/ll_no_photo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/bg_purple"
                android:gravity="center"
                android:orientation="vertical"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_no_photo" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_12"
                    android:fontFamily="@font/inter_medium"
                    android:text="@string/no_photos_uploaded_yet"
                    android:textAllCaps="false"
                    android:textColor="@color/purple"
                    android:textSize="@dimen/text_size_14"
                    android:autoSizeMaxTextSize="@dimen/text_size_16"
                    android:autoSizeMinTextSize="@dimen/text_size_12"
                    android:autoSizeTextType="uniform"/>

            </androidx.appcompat.widget.LinearLayoutCompat>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_edit_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.50" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_choose_from"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/inter_medium"
            android:gravity="center"
            android:text="@string/choose_from"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_16"
            android:autoSizeMaxTextSize="@dimen/text_size_20"
            android:autoSizeMinTextSize="@dimen/text_size_12"
            android:autoSizeTextType="uniform"
            app:layout_constraintBottom_toTopOf="@+id/ll_buttons"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/gl_edit_image" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/ll_buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_24"
            android:layout_marginEnd="@dimen/margin_24"
            android:layout_marginBottom="@dimen/margin_30"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_choose_from">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_camera"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_12"
                android:layout_weight="1"
                android:background="@drawable/bg_selected_size"
                android:fontFamily="@font/inter_semi_bold"
                android:text="@string/camera"
                android:textAllCaps="false"
                android:textColor="@color/purple"
                android:textSize="@dimen/text_size_14"
                android:autoSizeMaxTextSize="@dimen/text_size_16"
                android:autoSizeMinTextSize="@dimen/text_size_12"
                android:autoSizeTextType="uniform"
                app:backgroundTint="@null"
                app:icon="@drawable/ic_camera"
                app:iconGravity="textStart"
                app:iconTint="@color/purple" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_gallery"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_12"
                android:layout_weight="1"
                android:background="@drawable/bg_size"
                android:fontFamily="@font/inter_semi_bold"
                android:text="@string/gallery"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_14"
                android:autoSizeMaxTextSize="@dimen/text_size_16"
                android:autoSizeMinTextSize="@dimen/text_size_12"
                android:autoSizeTextType="uniform"
                app:backgroundTint="@null"
                app:icon="@drawable/ic_gallery"
                app:iconGravity="textStart"
                app:iconTint="@color/white" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>